--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Opens April 10th!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">WIN FREE PRIZES!!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
             </div>
 
@@ -194,14 +194,14 @@
                     }
                 </script>
                 <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-top: 24px;">Game Available In:</h1> -->
-                <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
-                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">START GAME</button>
-                </a> -->
+                <a href="sock-drop-game.html" style="text-decoration: none;">
+                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
+                </a>
             </blockquote>
 
 
 
-            <p id="demo" style="width: 100%;
+            <!-- <p id="demo" style="width: 100%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -240,7 +240,7 @@
                 document.getElementById("demo").innerHTML = "EXPIRED";
               }
             }, 1000);
-            </script>
+            </script> -->
 
 
             <blockquote style="width: 100%; text-align: center; padding: 24px 0px 0px 0px!important;">
