--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -194,28 +194,28 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Wicskie Tu</th>
-                          <td>157 Socks</td>
+                          <th scope="row">1. InjuneJoe420</th>
+                          <td>150 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Eamonn</th>
-                          <td>75 Socks</td>
+                          <th scope="row">2. Matt</th>
+                          <td>141 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Lando</th>
-                          <td>64 Socks</td>
+                          <th scope="row">3. Cheyene</th>
+                          <td>53 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Deathstar Nation</th>
-                          <td>51 Socks</td>
+                          <th scope="row">4. Rui</th>
+                          <td>42 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. SkyDawn</th>
-                          <td>41 Socks</td>
+                          <th scope="row">5. Osa Maas</th>
+                          <td>38 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Toriigates</th>
-                          <td>35 Socks</td>
+                          <th scope="row">6. Ari</th>
+                          <td>23 Socks</td>
                         </tr>
                         <tr>
                           <th scope="row">7. Varlsincharge</th>
@@ -249,44 +249,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Wicskie Tu</th>
-                          <td>87 Pickles</td>
+                          <th scope="row">1. Matt</th>
+                          <td>71</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Eamonn</th>
-                          <td>30 Pickles</td>
+                          <th scope="row">2. InjuneJoe420</th>
+                          <td>43 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Lando</th>
-                          <td>24 Pickles</td>
+                          <th scope="row">3. Cheyene</th>
+                          <td>31 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Deathstar Nation</th>
-                          <td>23 Pickles</td>
+                          <th scope="row">4. Ari</th>
+                          <td>13 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. SkyDawn</th>
-                          <td>12 Pickles</td>
+                          <th scope="row">5. Osa Maas</th>
+                          <td>9 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Michela</th>
-                          <td>11 Pickles</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. Toriigates</th>
+                          <th scope="row">6. Toriigates</th>
                           <td>8 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Meowfoots</th>
+                          <th scope="row">7. Meowfoots</th>
                           <td>6 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Heather</th>
+                          <th scope="row">8. Heather</th>
                           <td>5 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Scotti Pippen</th>
+                          <th scope="row">9. Scotti Pippen</th>
                           <td>5 Pickles</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">10. Rui</th>
+                          <td>3 Pickles</td>
                         </tr>
                       </tbody>
                     </table>
