--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -194,44 +194,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. InjuneJoe420</th>
+                          <th scope="row">1. Derrick</th>
+                          <td>158 Socks</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. InjuneJoe420</th>
                           <td>150 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Matt</th>
+                          <th scope="row">3. Matt</th>
                           <td>141 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Cheyene</th>
+                          <th scope="row">4. Dakota</th>
+                          <td>101 Socks</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Cheyene</th>
                           <td>53 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Rui</th>
+                          <th scope="row">6. Rui</th>
                           <td>42 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Osa Maas</th>
+                          <th scope="row">7. Osa Maas</th>
                           <td>38 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Ari</th>
+                          <th scope="row">8. Ari</th>
                           <td>23 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Varlsincharge</th>
+                          <th scope="row">9. Varlsincharge</th>
                           <td>21 Socks</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Michela</th>
+                          <th scope="row">10. Michela</th>
                           <td>19 Socks</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Meowfoots</th>
-                          <td>11 Socks</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. HeatherHesling</th>
-                          <td>9 Socks</td>
                         </tr>
                       </tbody>
                     </table>
@@ -249,44 +249,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Matt</th>
+                          <th scope="row">1. Derrick</th>
+                          <td>99</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Matt</th>
                           <td>71</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">3. Dakota</th>
+                          <td>54</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. InjuneJoe420</th>
                           <td>43 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Cheyene</th>
+                          <th scope="row">5. Cheyene</th>
                           <td>31 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Ari</th>
+                          <th scope="row">6. Ari</th>
                           <td>13 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Osa Maas</th>
+                          <th scope="row">7. Osa Maas</th>
                           <td>9 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Toriigates</th>
+                          <th scope="row">8. Toriigates</th>
                           <td>8 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Meowfoots</th>
+                          <th scope="row">9. Meowfoots</th>
                           <td>6 Pickles</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Heather</th>
+                          <th scope="row">10. Heather</th>
                           <td>5 Pickles</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Scotti Pippen</th>
-                          <td>5 Pickles</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Rui</th>
-                          <td>3 Pickles</td>
                         </tr>
                       </tbody>
                     </table>
