--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -184,7 +184,7 @@
               <div class="tab-content" id="pills_tabFullContent">
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top 5 Players win FREE Cannaco Socks</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
                     <table class="table">
                       <thead>
                         <tr>
