--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -198,16 +198,16 @@
                           <td>158</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">2. Kota</th>
+                          <td>153</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. InjuneJoe420</th>
                           <td>150</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Matt</th>
+                          <th scope="row">4. Matt</th>
                           <td>141</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">4. Dakota</th>
-                          <td>101</td>
                         </tr>
                         <tr>
                           <th scope="row">5. Cheyene</th>
@@ -253,12 +253,12 @@
                           <td>99</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Matt</th>
-                          <td>71</td>
+                          <th scope="row">2. Kota</th>
+                          <td>85</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Dakota</th>
-                          <td>54</td>
+                          <th scope="row">3. Matt</th>
+                          <td>71</td>
                         </tr>
                         <tr>
                           <th scope="row">4. InjuneJoe420</th>
