--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -194,44 +194,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota</th>
+                          <th scope="row">1. Eamonn</th>
+                          <td>422</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Kota</th>
                           <td>373</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">3. InjuneJoe420</th>
                           <td>308</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Derrick</th>
+                          <th scope="row">4. Derrick</th>
                           <td>158</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Matt</th>
+                          <th scope="row">5. Matt</th>
                           <td>141</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Cheyene</th>
+                          <th scope="row">6. Cheyene</th>
                           <td>53</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Rui</th>
+                          <th scope="row">7. Rui</th>
                           <td>42</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Osa Maas</th>
+                          <th scope="row">8. Osa Maas</th>
                           <td>38</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Ari</th>
+                          <th scope="row">9. Ari</th>
                           <td>23</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Varlsincharge</th>
+                          <th scope="row">10. Varlsincharge</th>
                           <td>21</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Michela</th>
-                          <td>19</td>
                         </tr>
                       </tbody>
                     </table>
@@ -249,44 +249,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota</th>
+                          <th scope="row">1. Heather</th>
+                          <td>255</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Kota</th>
                           <td>195</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">3. InjuneJoe420</th>
                           <td>176</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Derrick</th>
+                          <th scope="row">4. Derrick</th>
                           <td>99</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Matt</th>
+                          <th scope="row">5. Matt</th>
                           <td>71</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Cheyene</th>
+                          <th scope="row">6. Cheyene</th>
                           <td>31</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Ari</th>
+                          <th scope="row">7. Ari</th>
                           <td>13</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Osa Maas</th>
+                          <th scope="row">8. Osa Maas</th>
                           <td>9</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Toriigates</th>
+                          <th scope="row">9. Toriigates</th>
                           <td>8</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Meowfoots</th>
+                          <th scope="row">10. Meowfoots</th>
                           <td>6</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Heather</th>
-                          <td>5</td>
                         </tr>
                       </tbody>
                     </table>
