--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -214,24 +214,24 @@
                           <td>141</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Cheyene</th>
+                          <th scope="row">6. Oregon Delights</th>
+                          <td>58</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Cheyene</th>
                           <td>53</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Rui</th>
+                          <th scope="row">8. Rui</th>
                           <td>42</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Osa Maas</th>
+                          <th scope="row">9. Osa Maas</th>
                           <td>38</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Ari</th>
+                          <th scope="row">10. Ari</th>
                           <td>23</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Varlsincharge</th>
-                          <td>21</td>
                         </tr>
                       </tbody>
                     </table>
@@ -269,24 +269,24 @@
                           <td>71</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Cheyene</th>
+                          <th scope="row">6. Oregon Delights</th>
+                          <td>32</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Cheyene</th>
                           <td>31</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Ari</th>
+                          <th scope="row">8. Ari</th>
                           <td>13</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Osa Maas</th>
+                          <th scope="row">9. Osa Maas</th>
                           <td>9</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Toriigates</th>
+                          <th scope="row">10. Toriigates</th>
                           <td>8</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Meowfoots</th>
-                          <td>6</td>
                         </tr>
                       </tbody>
                     </table>
