--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -195,7 +195,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota</th>
-                          <td>1218</td>
+                          <td>2903</td>
                         </tr>
                         <tr>
                           <th scope="row">2. InjuneJoe420</th>
@@ -230,8 +230,8 @@
                           <td>38</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Ari</th>
-                          <td>23</td>
+                          <th scope="row">10. Michela</th>
+                          <td>24</td>
                         </tr>
                       </tbody>
                     </table>
@@ -250,7 +250,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota</th>
-                          <td>706</td>
+                          <td>1722</td>
                         </tr>
                         <tr>
                           <th scope="row">2. InjuneJoe420</th>
@@ -277,16 +277,16 @@
                           <td>31</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Ari</th>
+                          <th scope="row">8. Michela</th>
+                          <td>14</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Taya</th>
+                          <td>14</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">10. Ari</th>
                           <td>13</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Osa Maas</th>
-                          <td>9</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Toriigates</th>
-                          <td>8</td>
                         </tr>
                       </tbody>
                     </table>
