--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -195,23 +195,23 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota</th>
-                          <td>2903</td>
+                          <td>4125</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">2. Derrick</th>
+                          <td>1583</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. InjuneJoe420</th>
                           <td>794</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Eamonn</th>
+                          <th scope="row">4. Eamonn</th>
                           <td>422</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Derrick</th>
-                          <td>316</td>
-                        </tr>
-                        <tr>
                           <th scope="row">5. Matt</th>
-                          <td>141</td>
+                          <td>339</td>
                         </tr>
                         <tr>
                           <th scope="row">6. Oregon Delights</th>
@@ -230,8 +230,8 @@
                           <td>38</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Michela</th>
-                          <td>24</td>
+                          <th scope="row">10. Jay</th>
+                          <td>33</td>
                         </tr>
                       </tbody>
                     </table>
@@ -250,23 +250,23 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota</th>
-                          <td>1722</td>
+                          <td>2375</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. InjuneJoe420</th>
+                          <th scope="row">2. Derrick</th>
+                          <td>939</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. InjuneJoe420</th>
                           <td>259</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Eamonn</th>
+                          <th scope="row">4. Eamonn</th>
                           <td>255</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Derrick</th>
-                          <td>210</td>
-                        </tr>
-                        <tr>
                           <th scope="row">5. Matt</th>
-                          <td>71</td>
+                          <td>183</td>
                         </tr>
                         <tr>
                           <th scope="row">6. Oregon Delights</th>
