--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -226,12 +226,12 @@
                           <td>42</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Osa Maas</th>
-                          <td>38</td>
+                          <th scope="row">9. Theo</th>
+                          <td>42</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Jay</th>
-                          <td>33</td>
+                          <th scope="row">10. Osa Maas</th>
+                          <td>38</td>
                         </tr>
                       </tbody>
                     </table>
