--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -339,66 +339,30 @@
                 JotForm.paymentExtrasOnTheFly([null,{"name":"heading","qid":"1","text":"Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},{"description":"","name":"email","qid":"3","subLabel":"example@example.com","text":"Email","type":"control_email"},null,{"description":"","name":"pickles","qid":"5","subLabel":"","text":"Pickles","type":"control_textbox"},{"description":"","name":"socks","qid":"6","subLabel":"","text":"Socks","type":"control_textbox"},{"description":"","name":"name","qid":"7","subLabel":"","text":"Name","type":"control_textbox"}]);}, 20); 
                 </script>
                 <form class="jotform-form" action="https://submit.jotform.com/submit/230913550105041" method="post" name="form_230913550105041" id="230913550105041" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID" value="230913550105041" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
-                  <div role="main" class="form-all">
-                    <ul class="form-section page-section">
-                      <li id="cid_1" class="form-input-wide" data-type="control_head">
-                        <div class="form-header-group  header-large">
-                          <div class="header-text httal htvam">
-                            <h1 id="header_1" class="form-header" data-component="header">Form</h1>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="form-line jf-required" data-type="control_textbox" id="id_6">
-                        <!-- <label class="form-label form-label-top form-label-auto" id="label_6" for="input_6"> Socks<span class="form-required">*</span> </label> -->
-                        <div id="cid_6" class="form-input-wide jf-required" data-layout="half"> <input type="text" id="input_6" name="q6_socks" data-type="input-textbox" class="form-readonly form-textbox validate[required]" data-defaultvalue="" style="width:310px" size="310" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_6" readonly="" required="" /> </div>
-                      </li>
-                      <li class="form-line jf-required" data-type="control_textbox" id="id_5">
-                        <!-- <label class="form-label form-label-top form-label-auto" id="label_5" for="input_5"> Pickles<span class="form-required">*</span> </label> -->
-                        <div id="cid_5" class="form-input-wide jf-required" data-layout="half"> <input type="text" id="input_5" name="q5_pickles" data-type="input-textbox" class="form-readonly form-textbox validate[required]" data-defaultvalue="" style="width:310px" size="310" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_5" readonly="" required="" /> </div>
-                      </li>
-                      <li class="form-line jf-required" data-type="control_textbox" id="id_7">
-                        <!-- <label class="form-label form-label-top form-label-auto" id="label_7" for="input_7"> Name<span class="form-required">*</span> </label> -->
-                        <div id="cid_7" class="form-input-wide jf-required" data-layout="half"> <input type="text" id="input_7" name="q7_name" data-type="input-textbox" class="form-textbox validate[required]" data-defaultvalue="" style="width:310px" size="310" value="" data-component="textbox" aria-labelledby="label_7" required="" /> </div>
-                      </li>
-                      <li class="form-line jf-required" data-type="control_email" id="id_3">
-                        <!-- <label class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> Email<span class="form-required">*</span> </label> -->
-                        <div id="cid_3" class="form-input-wide jf-required" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input type="email" id="input_3" name="q3_email" class="form-textbox validate[required, Email]" data-defaultvalue="" style="width:310px" size="310" value="" data-component="email" aria-labelledby="label_3 sublabel_input_3" required="" /><label class="form-sub-label" for="input_3" id="sublabel_input_3" style="min-height:13px" aria-hidden="false">example@example.com</label></span> </div>
-                      </li>
-                      <li class="form-line" data-type="control_button" id="id_2">
-                        <div id="cid_2" class="form-input-wide" data-layout="full" style="background: #ffd200; border-radius: 6px!important; overflow: hidden; margin-top: 16px!important;">
-                          <div data-align="auto" class="form-buttons-wrapper form-buttons-auto   jsTest-button-wrapperField"><button id="input_2" type="submit" class="form-submit-button submit-button jf-form-buttons jsTest-submitField" data-component="button" data-content="">Submit</button></div>
-                        </div>
-                        <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
-                          <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
-                        </blockquote>
-                      </li>
-                      <li style="display:none">Should be Empty: <input type="text" name="website" value="" /></li>
-                    </ul>
-                  </div>
-                  <script>
-                    JotForm.showJotFormPowered = "new_footer";
-                  </script>
-                  <script>
-                    JotForm.poweredByText = "Powered by Jotform";
-                  </script><input type="hidden" class="simple_spc" id="simple_spc" name="simple_spc" value="230913550105041" />
-                  <script type="text/javascript">
-                    var all_spc = document.querySelectorAll("form[id='230913550105041'] .si" + "mple" + "_spc");
-                    for (var i = 0; i < all_spc.length; i++)
-                    {
-                      all_spc[i].value = "230913550105041-230913550105041";
-                    }
-                  </script>
-                  <div class="formFooter-heightMask"></div>
-                  <div class="formFooter f6 branding21">
-                    <div class="formFooter-wrapper formFooter-leftSide"><a href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=230913550105041&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le" target="_blank" class="formFooter-logoLink"><img class="formFooter-logo" src="https://cdn.jotfor.ms/assets/img/logo2021/jotform-logo-white.svg" alt="Jotform Logo" style="height: 44px;"></a></div>
-                    <div class="formFooter-wrapper formFooter-rightSide"><span class="formFooter-text">Now create your own Jotform - It's free!</span><a class="formFooter-button" href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=230913550105041&utm_content=jotform_button&utm_campaign=powered_by_jotform_le" target="_blank">Create your own Jotform</a></div>
-                  </div>
-                </form><script type="text/javascript">JotForm.ownerView=true;</script><script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.40641"></script>
-                <script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.40641"></script>
-                
-        
-              </div>
-            </div>
+                    <div class="form-row form-group">
+                      <div class="col form-group left">
+                        <input type="text" id="input_6" name="q6_socks" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_6" readonly="" required="" />
+                      </div>
+                      <div class="col form-group right">
+                        <input type="text" id="input_5" name="q5_pickles" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_5" readonly="" required="" />
+                      </div>
+                    </div>
+                    <div id="cid_7"> 
+                      <input type="text" id="input_7" name="q7_name" data-type="input-textbox" class="form-control validate[required]" data-defaultvalue="" size="" placeholder="Name" value="" data-component="textbox" aria-labelledby="label_7" required="" />
+                      <div class="invalid-feedback">Add Full Name.</div>
+                    </div>
+                    <div id="cid_3">
+                      <input type="email" id="input_3" name="q3_email" data-type="input-textbox" class="form-control validate[required, Email]" data-defaultvalue="" size="" value="" placeholder="Email" data-component="email" aria-labelledby="label_3 sublabel_input_3" required="" />
+                      <div class="invalid-feedback">Add Email Address.</div>
+                    </div>
+                    <div id="cid_2" class="form-input-wide" data-layout="full" style="background: #ffd200; border-radius: 6px!important; overflow: hidden; margin-top: 16px!important;">
+                        <button id="input_2" type="submit" class="btn btn-primary btn-block jsTest-submitField" data-component="button" data-content="" style="color: black!important; border-radius: 6px!important; line-height: 12px!important;">Submit</button>
+                    </div>
+                </form>
+                <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
+                  <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
+                </blockquote>            
+
           </div>
         </div>
       </div>
